Report: List journal completed

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -196,10 +196,12 @@ get_printOrder = select printOrder from print_order where year = ? and journalId
 insert_printOrder = insert into print_order (year, journalID, printOrder) values(?,?,?)
 
 get_journal_id = select id from journals where journalCode = ?
-!End Print Order
+!End Print Order --------------------------------------------------------
 
+!Journal Group -----------------------------------------------------
+journalgroupname = select journalGroupName from journal_groups
 
-
+!End Print Order --------------------------------------------------------
 #--------------------------------------------------------------------------
 # End Master Data
 #--------------------------------------------------------------------------
@@ -432,8 +434,9 @@ search_inward = select inwardNumber, t4.subscriberNumber as subscriberId, t1.fro
 
 list_journal_all = select id, journalCode, journalName, issnNo, pages, startYear, issues from journals
 
-list_journal_group = select  t1.id, t1.journalCode, t1.journalName, t1.issnNo, t1.pages, t1.startYear, t1.issues from journals t1 \
-                     group t2 journal_group t3 where t1.id = t3.journalid and t2.id = t3.groupid and
+list_journal_group = select  t1.id, t1.journalCode, t1.journalName, t1.issnNo, t1.pages, t1.startYear, \
+                     t1.issues from journals t1, journal_groups t2, journal_group_contents t3 where t1.id = \
+                      t3.journalid and t2.id = t3.journalGroupId and
 !End List Journals ---------------------------------------------
 
 !List Agents ---------------------------------------------
