--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -94,6 +94,8 @@ search_country = select id, country from countries where country like ?
 ! Journal------------------------------------------------------
 journals = select journalName,journalCode from journals
 
+journal_groups = select id,journalGroupName from journal_groups order by id
+
 journal_insert = insert into journals(journalCode,journalName,issnNo,pages,startYear,issues) values(?,?,?,?,?,?)
 
 update_journal = update journals set journalCode = ?, journalName = ?, issnNo = ?, pages = ?, startYear = ?, issues = ? where id = ?
@@ -129,6 +131,7 @@ get_subType_by_id = select id, subtypecode, subtypedesc, subtype, nationality, i
 
 search_subType = select id, subtypecode, subtypedesc, subtype, nationality, institutional from subscriber_type where subtypecode like ? or subtype like ?
 
+get_subscriber_type = select subtype from subscriber where subscriberNumber = ?
 
 ! End Subscriber Type----------------------------------------------------
 
@@ -303,6 +306,8 @@ update_cheque_return =  update inward set \
                         chequeDDReturn = ?, chequeDDReturnReason = (select id from inward_return_reasons where return_reason=?), \
                         chequeDDReturnReasonOther = ? , returnDate = ? where inwardNumber = ?
 
+update_subscriber_in_inward = update inward set subscriberId = ? where inwardNumber = ?
+
 #--------------------------------------------------------------------------
 # Subscriber
 #--------------------------------------------------------------------------
@@ -403,7 +408,8 @@ delete_subscription = update subscription set active = false where id=?
 get_subscription_details =  select t1.id, t2.journalCode, t2.journalName,t1.copies,t1.startYear,t1.endYear from subscriptiondetails t1, journals t2 where t1.journalID = t2.id \
                             and t1.subscriptionID = ?
 
-
+get_journal_group_price = select rate from subscription_rates where journalGroupId = ? and subtypeid = ? \
+                            and year = ? and period = ?
 
 #--------------------------------------------------------------------------
 # Reports
