Subscriber and subscription UI subscription db changes

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -368,7 +368,9 @@ update_subscriber = update subscriber set \
                 where subscriberNumber = ?
 
 search_subscriber = select subscriberNumber, subscriberName, department, t3.country, t2.city as city, pincode \
-                from subscriber t1, cities t2, countries t3 where t1.city = t2.id and t1.country = t3.id
+                from subscriber t1 \
+                left join cities t2 on t1.city = t2.id \
+                left join countries t3 on t1.country = t3.id
 
 #--------------------------------------------------------------------------
 # Subscription
@@ -380,7 +382,6 @@ search_subscrption =    select  t1.id \
                                 ,t1.subscriptionTotal \
                                 ,t3.amount \
                                 ,t1.balance \
-                                ,t1.refund \
                                 ,t4.currency \
                                 ,t1.remarks \
                         from subscription t1 \
@@ -394,22 +395,25 @@ search_subscrption =    select  t1.id \
                             and t1.active = true \
                             order by t1.id desc
 
-insert_subscription = insert into subscription(subscriberID,inwardID,subscriptionTotal,remarks) \
-                      values ((select id from subscriber where subscriberNumber=?),(select id from inward where inwardNumber=?),?,?)
+insert_subscription = insert into subscription(subscriberID,inwardID,balance,subscriptionTotal,remarks) \
+                      values ((select id from subscriber where subscriberNumber=?),(select id from inward where inwardNumber=?),?,?,?)
 
 
 
-insert_subscription_detail = insert into subscriptiondetails (subscriptionID,journalID,copies,startYear,endYear) values (?, (select id from journals where journalCode=?), ?, ?, ?)
-
+insert_subscription_detail = insert into subscriptiondetails (subscriptionID,journalGroupID,copies,startYear,endYear,total) \
+                            values (?, ?, ?, ?, ?, ?)
 
 delete_subscription = update subscription set active = false where id=?
 
 
-get_subscription_details =  select t1.id, t2.journalCode, t2.journalName,t1.copies,t1.startYear,t1.endYear from subscriptiondetails t1, journals t2 where t1.journalID = t2.id \
+get_subscription_details =  select t1.id, t2.journalGroupName, t1.copies,t1.startYear,t1.endYear, t1.total from subscriptiondetails t1, journal_groups t2 where t1.journalGroupID = t2.id \
                             and t1.subscriptionID = ?
 
 get_journal_group_price = select rate from subscription_rates where journalGroupId = ? and subtypeid = ? \
                             and year = ? and period = ?
+
+get_journal_groupid_contents = select t1.journalname from journals t1,journal_group_contents t2 \
+                                where t2.journalId = t1.id and t2.journalGroupId = ?;
 
 #--------------------------------------------------------------------------
 # Reports
