--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -322,7 +322,8 @@ subscriber_insert = insert into subscriber(subscriberNumber, subscriberCreationD
                     (select id from subscriber_type where subtype=? and subtypedesc=?),?,?,?, \
                     (select id from agents where agentName = ?),?)
 
-get_last_subscriber = SELECT subscriberNumber,subscriberCreationDate FROM subscriber ORDER BY id DESC LIMIT 1
+get_last_subscriber = SELECT subscriberNumber FROM subscriber where YEAR(subscriberCreationDate)=YEAR(CURDATE()) ORDER BY id DESC LIMIT 1
+#SELECT subscriberNumber,subscriberCreationDate FROM subscriber ORDER BY id DESC LIMIT 1
 
 
 get_subscriber_by_number = select t1.subscriberNumber\
@@ -367,10 +368,12 @@ update_subscriber = update subscriber set \
                ,deactive = ? \
                 where subscriberNumber = ?
 
-search_subscriber = select subscriberNumber, subscriberName, department, t3.country, t2.city as city, pincode \
+search_subscriber = select subscriberNumber, subscriberName, department, t3.country, t4.state, \
+                t2.city as city, pincode \
                 from subscriber t1 \
                 left join cities t2 on t1.city = t2.id \
-                left join countries t3 on t1.country = t3.id
+                left join countries t3 on t1.country = t3.id \
+                left join states t4 on t1.state=t4.id
 
 #--------------------------------------------------------------------------
 # Subscription
