--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-log4j.rootLogger=ERROR, stdout, migration
+log4j.rootLogger=DEBUG, stdout, migration
 
 log4j.logger.JDSMigration.Inward=DEBUG
 #log4j.logger.JDSMigration.JDSMigrate=DEBUG
