--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -418,6 +418,20 @@ get_journal_group_price = select rate from subscription_rates where journalGroup
 get_journal_groupid_contents = select t1.journalname from journals t1,journal_group_contents t2 \
                                 where t2.journalId = t1.id and t2.journalGroupId = ?;
 
+get_subscription_details_for_inward = select t1.id as subscriptionid, t4.journalName, t2.startYear, t2.endYear, t2.copies \
+                                      from  subscription t1, \
+                                            subscriptiondetails t2, \
+                                            journal_group_contents t3, \
+                                            journals t4 \
+                                            inward t5 \
+                                      where t1.active=true \
+                                            and t1.id=t2.subscriptionID \
+                                            and t2.journalGroupID = t3.journalGroupID \
+                                            and t3.journalID = t4.id \
+                                            and t1.inwardID = t5.id \
+                                            and t5.inwardNumber = ? \
+                                      group by subscriptionid, t4.journalName, t2.startYear, t2.endYear, t2.copies
+
 #--------------------------------------------------------------------------
 # Reports
 #--------------------------------------------------------------------------
