--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -378,7 +378,7 @@ search_subscriber = select subscriberNumber, subscriberName, department, t3.coun
 #--------------------------------------------------------------------------
 # Subscription
 #--------------------------------------------------------------------------
-search_subscrption =    select  t1.id \
+get_subscription_for_subscriber =    select  t1.id \
                                 ,t2.subscriberNumber \
                                 ,t3.inwardNumber \
                                 ,DATE_FORMAT(t1.subscriptionDate,'%d/%m/%Y') as subscriptionDate \
@@ -397,6 +397,19 @@ search_subscrption =    select  t1.id \
                             and t2.subscriberNumber = ? \
                             and t1.active = true \
                             order by t1.id desc
+
+get_subscription_by_id =    select t3.journalGroupName as journalGroupName\
+                                , t2.startYear \
+                                , t2.endYear \
+                                , t2.copies \
+                                , t2.total \
+                                , (t2.total/t2.copies) as journalGroupCost \
+                            from subscription t1 \
+                                , subscriptiondetails t2 \
+                                , journal_groups t3 \
+                            where t1.id = t2.subscriptionID \
+                                and t2.journalGroupID = t3.id \
+                                and t1.id = ?
 
 insert_subscription = insert into subscription(subscriberID,inwardID,balance,subscriptionDate,subscriptionTotal,remarks) \
                       values ((select id from subscriber where subscriberNumber=?),(select id from inward where inwardNumber=?),?,?,?,?)
