--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -388,15 +388,12 @@ get_subscription_for_subscriber =    select  t1.id \
                                 ,t4.currency \
                                 ,t1.remarks \
                         from subscription t1 \
-                            ,subscriber t2 \
-                            ,inward t3 \
-                            ,currency t4 \
-                        where t1.subscriberID = t2.id \
-                            and t1.inwardID = t3.id \
-                            and t3.currency = t4.id \
-                            and t2.subscriberNumber = ? \
-                            and t1.active = true \
-                            order by t1.id desc
+                        left join subscriber t2 on t1.subscriberID = t2.id \
+                        left join inward t3 on t1.inwardID = t3.id \
+                        left join currency t4 on t3.currency = t4.id \
+                        where t2.subscriberNumber = ? \
+                        and t1.active = true \
+                        order by t1.id desc
 
 get_subscription_by_id =    select t3.journalGroupName as journalGroupName\
                                 , t2.startYear \
