--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -4,6 +4,7 @@
 log4j.rootLogger=ERROR, stdout, migration
 
 log4j.logger.JDSMigration.Inward=DEBUG
+log4j.logger.JDSMigration.Subscription=DEBUG
 #log4j.logger.JDSMigration.JDSMigrate=DEBUG
 #log4j.logger.JDSMigration.MigrationBase=DEBUG
 
