Edit subscription check in

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -387,6 +387,7 @@ get_subscription_for_subscriber =    select  t1.id \
                                 ,t1.balance \
                                 ,t4.currency \
                                 ,t1.remarks \
+                                ,t1.active \
                         from subscription t1 \
                         left join subscriber t2 on t1.subscriberID = t2.id \
                         left join inward t3 on t1.inwardID = t3.id \
@@ -395,12 +396,24 @@ get_subscription_for_subscriber =    select  t1.id \
                         and t1.active = true \
                         order by t1.id desc
 
-get_subscription_by_id =    select t3.journalGroupName as journalGroupName\
+get_subscription_info_by_id =   select t1.id, t3.subscriberName, t2.inwardNumber \
+                                    , t1.active, t1.balance, t1.subscriptionTotal \
+                                    , t1.remarks, t2.amount, t3.subscriberNumber \
+                                from subscription t1, inward t2, subscriber t3 \
+                                where t1.inwardID = t2.id \
+                                    and t1.subscriberID = t3.id \
+                                    and t1.id = ?
+
+get_subscription_detail_by_subscription_id =    select t2.id \
+                                , t3.journalGroupName as journalGroupName \
+                                , t2.journalGroupID \
                                 , t2.startYear \
                                 , t2.endYear \
                                 , t2.copies \
                                 , t2.total \
-                                , (t2.total/t2.copies) as journalGroupCost \
+                                , (select rate from subscription_rates where id=t2.journalPriceGroupID) as journalGroupCost\
+                                , t2.active \
+                                , t1.subscriptionTotal \
                             from subscription t1 \
                                 , subscriptiondetails t2 \
                                 , journal_groups t3 \
@@ -413,8 +426,8 @@ insert_subscription = insert into subscription(subscriberID,inwardID,balance,sub
 
 
 
-insert_subscription_detail = insert into subscriptiondetails (subscriptionID,journalGroupID,copies,startYear,endYear,total) \
-                            values (?, ?, ?, ?, ?, ?)
+insert_subscription_detail = insert into subscriptiondetails (subscriptionID,journalGroupID,journalPriceGroupID,copies,startYear,endYear,total) \
+                            values (?, ?, ?, ?, ?, ?, ?)
 
 delete_subscription = update subscription set active = false where id=?
 
@@ -422,7 +435,7 @@ delete_subscription = update subscription set active = false where id=?
 get_subscription_details =  select t1.id, t2.journalGroupName, t1.copies,t1.startYear,t1.endYear, t1.total from subscriptiondetails t1, journal_groups t2 where t1.journalGroupID = t2.id \
                             and t1.subscriptionID = ?
 
-get_journal_group_price = select rate from subscription_rates where journalGroupId = ? and subtypeid = ? \
+get_journal_group_price = select id, rate from subscription_rates where journalGroupId = ? and subtypeid = ? \
                             and year = ? and period = ?
 
 get_journal_groupid_contents = select t1.journalname from journals t1,journal_group_contents t2 \
@@ -442,6 +455,8 @@ get_subscription_details_for_inward = select t1.id as subscriptionid, t4.journal
                                             and t5.inwardNumber = ? \
                                       group by subscriptionid, t4.journalName, t2.startYear, t2.endYear, t2.copies
 
+update_subscription_detail =    update subscriptiondetails set startYear=?, endYear=?, copies=?, active=? \
+                                where id=?;
 #--------------------------------------------------------------------------
 # Reports
 #--------------------------------------------------------------------------
