Remove subGroupFormBean.java, priceGroupFormBean.java, subGroupModel.java, priceGroupModel.java priceGroup.java, subGroup.java
createPriceGroup.jsp, createSubGroup.jsp, 
displayPriceGroup.jsp, displaySubGroup.jsp,
editPriceGroup.jsp, editSubGroup.jsp,
journalPriceGroup.jsp, journalSubGroup.jsp
searchJournalPriceGroup.jsp, searchJournalSubGroup.jsp
createPriceGroup.js, createSubGroup.js
displayPriceGroup.js, displaySubjectGroup.js
editPriceGroup.js, editSubjectGroup.js
Remove "Journal Price Group" from sidebar.jsp
Remove the action for "jpGroup" in main.java

Changes
(1) subscriber_type - no of characters increased to 6.
(2) printOrderFormBean - cleanup
(3) printOrder Controller - cleanup
(4) printOrder.java - cleanup

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -96,6 +96,8 @@ journals = select journalName,journalCode from journals
 
 journal_groups = select id,journalGroupName from journal_groups order by id
 
+journal_name = select journalName from journals
+
 journal_insert = insert into journals(journalCode,journalName,issnNo,pages,startYear,issues) values(?,?,?,?,?,?)
 
 update_journal = update journals set journalCode = ?, journalName = ?, issnNo = ?, pages = ?, startYear = ?, issues = ? where id = ?
@@ -202,7 +204,25 @@ get_journal_id = select id from journals where journalCode = ?
 !End Print Order --------------------------------------------------------
 
 !Journal Group -----------------------------------------------------
-journalgroupname = select journalGroupName from journal_groups
+journalgroupname = select journalGroupName from journal_groups where year = ?
+
+journalGroupName = select journalGroupName from journal_groups
+
+getJournalGroupId = select id, journalGroupName from journal_groups where journalGroupName = ?
+
+getJournalGroupContents = select journalName from journals \
+where id = ANY (select journalId from journal_group_contents \
+where journalGroupId = (select id from journal_groups where journalGroupName = ?))
+
+year = select year from year
+
+createNewJournalGroup = insert into journal_groups(journalGroupName,year) values(?,?)
+
+getJournalId = select id from journals where journalName = ?
+
+addToJournalGroupContents = insert into journal_group_contents(journalGroupId, journalid) values(?,?)
+
+checkIfJournalGroupExists = select * from journal_groups where journalGroupName = ? and year = ?
 
 !End Print Order --------------------------------------------------------
 #--------------------------------------------------------------------------
