--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -155,6 +155,14 @@
         <servlet-name>reports</servlet-name>
         <servlet-class>IAS.Controller.reports.reports</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>journalSubjectGroup</servlet-name>
+        <servlet-class>IAS.Controller.masterdata.journalSubjectGroup</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>journalSubscriptionRateGroup</servlet-name>
+        <servlet-class>IAS.Controller.masterdata.journalSubscriptionRateGroup</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>main</servlet-name>
         <url-pattern>/main</url-pattern>
@@ -266,6 +274,14 @@
     <servlet-mapping>
         <servlet-name>reports</servlet-name>
         <url-pattern>/reports</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>journalSubjectGroup</servlet-name>
+        <url-pattern>/journalSubjectGroup</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>journalSubscriptionRateGroup</servlet-name>
+        <url-pattern>/journalSubscriptionRateGroup</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
