--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -115,6 +115,8 @@ search_journal = select id, journalCode, journalName, issnNo, pages, startYear, 
 
 sub_type = select distinct subtype from subscriber_type
 
+subscriberType = select concat(subtypecode, '-',  subtypedesc) as subscriberType from subscriber_type
+
 subtype_free = select distinct subtype from subscriber_type where subtype = "Free"
 
 subtype_desc = select distinct subtypedesc from subscriber_type where subtype = ?
@@ -480,7 +482,7 @@ update_subscription_detail =    update subscriptiondetails set startYear=?, endY
 #--------------------------------------------------------------------------
 # Reports
 #--------------------------------------------------------------------------
-
+    
 !List Subscriber Type ---------------------------------------------
 
 search_subtype_all = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type order by id
@@ -546,7 +548,7 @@ list_agent_prm = select t1.id\
                     left join districts t3 on t1.districtId = t3.id \
                     left join states t4 on t1.stateId = t4.id \
                     left join countries t5 on t1.countryId = t5.id \
-                    where t1.id = ?
+                    where
 !End List Agents ---------------------------------------------
 
 #--------------------------------------------------------------------------
