--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -253,6 +253,7 @@ insert_inward = insert into inward(\
 get_last_inward = SELECT inwardNumber,inwardCreationDate FROM inward ORDER BY id DESC LIMIT 1
 
 get_inward_by_number = select t1.inwardNumber\
+                      ,t1.id as InwardID \
                       ,t1.from \
                       ,t2.country \
                       ,t3.state \
@@ -265,6 +266,7 @@ get_inward_by_number = select t1.inwardNumber\
                       ,DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate \
                       ,t5.subscriberNumber as subscriberId \
                       ,t6.purpose as inwardPurpose \
+                      ,t1.inwardPurpose as inwardPurposeID\
                       ,t7.payment_mode as paymentMode \
                       ,t1.chqddNumber \
                       ,DATE_FORMAT(t1.paymentDate,'%d/%m/%Y') as paymentDate \
@@ -329,6 +331,8 @@ update_cheque_return =  update inward set \
                         chequeDDReturnReasonOther = ? , returnDate = ? where inwardNumber = ?
 
 update_subscriber_in_inward = update inward set subscriberId = ? where inwardNumber = ?
+
+update_inward_complete_flag = update inward set completed = true where id = ?
 
 #--------------------------------------------------------------------------
 # Subscriber
