errorHandler.java and edit subscription

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -404,39 +404,32 @@ search_subscriber = select subscriberNumber, subscriberName, department, t3.coun
 #--------------------------------------------------------------------------
 # Subscription
 #--------------------------------------------------------------------------
-get_subscription_for_subscriber =   select t9.id \
-                                    ,t9.inwardNumber \
-                                    ,t9.subscriptionDate \
-                                    ,t9.amount \
-                                    ,t9.subscriptionTotal \
-                                    ,(t9.subscriptionTotal - t9.amount) as balance \
-                                    , t9.currency from( \
-                                            select t8.id \
-                                                , t8.inwardNumber \
-                                                , t8.subscriptionDate \
-                                                , t8.amount \
-                                                , sum(subscriptionTotal) as subscriptionTotal \
-                                                , t8.currency \
-                                            from (select  t1.id \
-                                                    ,t2.subscriberNumber \
-                                                    ,t3.inwardNumber \
-                                                    ,(t5.copies * t6.rate) as subscriptionTotal \
-                                                    ,DATE_FORMAT(t1.subscriptionDate,'%d/%m/%Y') as subscriptionDate \
-                                                    ,t3.amount \
-                                                    ,t4.currency \
-                                                    ,t1.remarks \
-                                                    ,t5.active \
-                                                from \
-                                                    subscription t1 left join subscriber t2 on t1.subscriberID = t2.id \
-                                                    left join inward t3 on t1.inwardID = t3.id \
-                                                    left join currency t4 on t3.currency = t4.id \
-                                                    left join subscriptiondetails t5 on t1.id=t5.subscriptionID \
-                                                    left join subscription_rates t6 on t5.journalPriceGroupID=t6.id \
-                                                    where t2.subscriberNumber = ? \
-                                                order by t1.id desc \
-                                            ) t8 \
-                                            where t8.active = true \
-                                    ) t9
+get_subscription_for_subscriber =     select  t5.id \
+                                            , t5.inwardNumber \
+                                            , DATE_FORMAT(t5.subscriptionDate,'%d/%m/%Y') as subscriptionDate \
+                                            , t5.amount \
+                                            , sum(copies * t7.rate) as subscriptionTotal \
+                                            , (sum(copies * t7.rate) - t5.amount) as balance \
+                                            , t5.currency \
+                                    from  subscriptiondetails t6 \
+                                        , subscription_rates t7 \
+                                        , ( \
+                                            select t4.subscriberName \
+                                                    , t1.id \
+                                                    , t2.inwardNumber \
+                                                    , t2.amount \
+                                                    , t3.currency \
+                                                    , t1.subscriptionDate \
+                                            from subscription t1 left join inward t2 on t1.inwardID = t2.id \
+                                            left join currency t3 on t2.currency = t3.id \
+                                            left join subscriber t4 on t1.subscriberID = t4.id \
+                                            where t4.subscriberNumber = ? \
+                                            ) as t5 \
+                                    where t5.id=t6.subscriptionID \
+                                        and t6.journalPriceGroupID = t7.id \
+                                        and t6.active=true \
+                                        group by t5.id, t5.inwardNumber, t5.amount \
+                                        order by t5.id desc \
 
 
 get_subscription_info_by_id =   select t1.id, t3.subscriberName, t2.inwardNumber \
