fixed printOrder journalGroup partially completed

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -115,7 +115,9 @@ search_journal = select id, journalCode, journalName, issnNo, pages, startYear, 
 
 sub_type = select distinct subtype from subscriber_type
 
-subscriberType = select concat(subtypecode, '-',  subtypedesc) as subscriberType from subscriber_type
+subscribertype = select subtypedesc as subscriberType from subscriber_type
+
+subscribertype1 = select concat(subtypecode, '-',  subtypedesc) as subscriberType from subscriber_type
 
 subtype_free = select distinct subtype from subscriber_type where subtype = "Free"
 
@@ -194,7 +196,9 @@ get_year = select distinct(year) from print_order group by year
 
 get_print_order_by_year = select t1.id, t2.journalCode, t2.journalName, t1.year, t2.issues, t1.printOrder, (t2.issues * t1.printOrder) annualPrintOrder from print_order t1, journals t2 where t1.journalId = t2.id and t1.year = ?
 
-update_printOrder = update print_order set printOrder = ? where year = ? and journalId = (select id from journals where journalCode = ?)
+!update_printOrder = update print_order set printOrder = ? where year = ? and journalId = (select id from journals where journalCode = ?)
+
+update_printOrder = update print_order set printOrder = ? where id = ?
 
 add_new_print_order = select id, journalCode, journalName, issues from journals
 
@@ -203,6 +207,8 @@ get_printOrder = select printOrder from print_order where year = ? and journalId
 insert_printOrder = insert into print_order (year, journalID, printOrder) values(?,?,?)
 
 get_journal_id = select id from journals where journalCode = ?
+
+get_print_order_id = select id from print_order where year = ? and journalId = (select id from journals where journalCode = ?)
 !End Print Order --------------------------------------------------------
 
 !Journal Group -----------------------------------------------------
@@ -227,6 +233,24 @@ addToJournalGroupContents = insert into journal_group_contents(journalGroupId, j
 checkIfJournalGroupExists = select * from journal_groups where journalGroupName = ? and year = ?
 
 !End Print Order --------------------------------------------------------
+
+!Annual Subscription Rate------------------------------------------------------------------------
+search_subRate = select t1.id, t2.journalGroupName, t3.subtypedesc, t1.year, t1.period, t1.rate from subscription_rates t1, journal_groups t2, subscriber_type t3 \
+        where t1.journalGroupId = t2.id and t1.subtypeId = t3.id and t1.year = ? and t2.journalGroupName = ? and t3.subtypedesc = ?
+
+add_subRate = insert into subscription_rates (journalGroupId, subtypeId, year, period, rate) values \
+((select id from journal_groups where journal_groups.journalGroupName = ?), \
+(select id from subscriber_type where subscriber_type.subtypedesc = ?),?,?,?)
+
+check_subRate = select id from subscription_rates \
+where journalGroupId = (select id from journal_groups where journal_groups.journalGroupName = ?) and \
+subtypeId = (select id from subscriber_type where subscriber_type.subtypedesc = ?) and \
+year = ? and \
+period = ?
+
+
+
+!End Annual Subscription Rate-------------------------------------------------------------------------------
 #--------------------------------------------------------------------------
 # End Master Data
 #--------------------------------------------------------------------------
