Journal group completed. Removed dependency on year New issue Need to check the existence of the group name before a new group is created. This check should be done on the jsp side. If the group exists, then prevent the save functionality. As of now if you type the same group name, it will let you add new journals to the same group Status: Accepted

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -212,11 +212,12 @@ get_print_order_id = select id from print_order where year = ? and journalId = (
 !End Print Order --------------------------------------------------------
 
 !Journal Group -----------------------------------------------------
-journalgroupname = select journalGroupName from journal_groups where year = ?
+!journalgroupname = select journalGroupName from journal_groups where year = ?!
+journalgroupname = select journalGroupName from journal_groups
 
 journalGroupName = select journalGroupName from journal_groups
 
-getJournalGroupId = select id, journalGroupName from journal_groups where journalGroupName = ?
+getJournalGroupId = select id from journal_groups where journalGroupName = ?
 
 getJournalGroupContents = select journalName from journals \
 where id = ANY (select journalId from journal_group_contents \
@@ -224,13 +225,17 @@ where journalGroupId = (select id from journal_groups where journalGroupName = ?
 
 year = select year from year
 
-createNewJournalGroup = insert into journal_groups(journalGroupName,year) values(?,?)
+createNewJournalGroup = insert into journal_groups(journalGroupName) values(?)
 
 getJournalId = select id from journals where journalName = ?
 
-addToJournalGroupContents = insert into journal_group_contents(journalGroupId, journalid) values(?,?)
+addToJournalGroupContents = insert into journal_group_contents(journalGroupId, journalId) values((select id from journal_groups where journalGroupName = ?), (select id from journals where journalName = ?))
 
-checkIfJournalGroupExists = select * from journal_groups where journalGroupName = ? and year = ?
+checkIfJournalGroupExists = select * from journal_groups where journalGroupName = ?
+
+checkIfJournalGroupContentExists = select * from journal_group_contents where \
+journalGroupId = (select id from journal_groups where journalGroupName = ?) and \
+journalId = (select id from journals where journalName = ?)
 
 !End Print Order --------------------------------------------------------
 
