Annual Subscription Rate fixed

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -212,10 +212,9 @@ get_print_order_id = select id from print_order where year = ? and journalId = (
 !End Print Order --------------------------------------------------------
 
 !Journal Group -----------------------------------------------------
-!journalgroupname = select journalGroupName from journal_groups where year = ?!
-journalgroupname = select journalGroupName from journal_groups
+journalGroupName1 = select journalGroupName from journal_groups where year = ?
 
-journalGroupName = select journalGroupName from journal_groups
+journalgroupname = select journalGroupName from journal_groups
 
 getJournalGroupId = select id from journal_groups where journalGroupName = ?
 
